fix: add overflow-hidden to body and html

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ html, body{
   height: 100%;
   max-height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 #root{
   height: 100%;
